syntax = "proto3";

package proto;

import "comet_message.proto";

message GetSystemInfoRequest {}
message GetSystemInfoResponse {
  bool debug_enabled = 1;
  string commit = 2;
  string version = 3;
  string database_engine = 4;
}

message CreateCometRequest {
  // Comet human readable name
  string name = 1;
  // total time requested for comet life by user
  // accepts humanized time string
  string time_requested = 2;
  enum Size {
    NONE = 0;
    TINY = 1;
    SMALL = 2;
    MEDIUM = 3;
    LARGE = 4;
    ENORMOUS = 5;
  }
  Size size = 3;
  // metadata is a key/value store for extra data that apps might want to store
  map<string, string> metadata = 4;
  string notes = 5;
}
message CreateCometResponse { Comet comet = 1; }

message DeleteCometRequest {}
message DeleteCometResponse {}

message ExtendCometRequest {}
message ExtendCometResponse {}

message GetCometRequest {}
message GetCometResponse {}

message ListCometsRequest {}
message ListCometsResponse {}

message SearchCometsRequest {}
message SearchCometsResponse {}

message StartCometRequest {}
message StartCometResponse {}

message StopCometRequest {}
message StopCometResponse {}

message UpdateCometRequest {}
message UpdateCometResponse {}
